--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,6 +10,7 @@ AllCops:
     - '**/Rakefile'
     - 'spec/rails_helper.rb'
     - 'spec/spec_helper.rb'
+    - 'spec/factories.rb'
     - 'config/initializers/*'
     - 'config/environments/*'
 
