Exclude specs from DescribeClass Rubocop rule
We feel there is no need to check for describe class param in spec files. Sometimes a free text can help explain better what we are
testing.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,11 @@ Documentation:
   Description: Document classes and non-namespace modules.
   Enabled: false
 
+# No need to check for describe class param in spec files.
+RSpec/DescribeClass:
+  Exclude:
+    - spec/**/*
+
 # Just a preference to use %w[] over %w()
 Style/PercentLiteralDelimiters:
   PreferredDelimiters:
