--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,7 @@
 machine:
+  pre:
+    # Install PhantomJS - required for JS testing
+    - sudo curl --output /usr/local/bin/phantomjs https://s3.amazonaws.com/circle-downloads/phantomjs-2.1.1
   ruby:
     version:
       2.3.0
